--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@
 *.dll
 *.so
 *.dylib
+docker-machine-driver-openbsd
 
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+.vscode
